# regextokens

./: .gitignore  .pre-commit-hooks.yaml  .regextokens-baseline.json  CLAUDE.md  LICENSE  README.md  SHIPPING.md  action.yml  build_patterns.py  patterns.json  pyproject.toml  readme.md  references.bib  references.md  regex.csv  regex.json  sniffer-audit.md
.github/workflows/: ci.yml  json-to-md-and-csv.yml  release.yml
regextokens/: __init__.py  baseline.py  catalog.py  cli.py  report.py  scanner.py  verify.py
regextokens/data/: patterns.json
tests/: test_baseline.py  test_engine.py  test_patterns.py
