[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "regextokens"
version = "0.2.0"
description = "Sourced, tested, offline-proving regex scanner for OAuth / API tokens and secrets."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "odomojuli", email = "info@odomojuli.com" }]
keywords = ["security", "secret-scanning", "secrets", "regex", "tokens", "credentials", "sast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/odomojuli/regextokens"
Source = "https://github.com/odomojuli/regextokens"
Issues = "https://github.com/odomojuli/regextokens/issues"

[project.scripts]
regextokens = "regextokens.cli:main"

[tool.setuptools]
packages = ["regextokens"]

[tool.setuptools.package-data]
regextokens = ["data/patterns.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
